[metadata]
name = odc-stats
description = Statistical Product Generation Framework
version = attr: odc.stats._version.__version__
author = Open Data Cube
author_email =
maintainer = Open Data Cube
maintainer_email =
long_description_content_type = text/markdown
long_description = file: README.md
platforms = any
license = Apache License 2.0
url = https://github.com/opendatacube/odc-stats/

[options]
include_package_data = true
zip_safe = false
packages = find_namespace:
python_requires = >=3.8
tests_require = pytest
install_requires =
    botocore
    click>=8.0.0
    dask
    datacube
    distributed
    numpy
    odc-cloud[ASYNC]
    odc_algo
    odc_dscache>=0.2.2
    odc_io
    odc_stac
    pandas
    pystac>=1.1.0
    eodatasets3>=0.22.0
    toolz
    tqdm
    # pin xarray version since the groupby bug on multi-indexed dataarray with 2022.6.0
    xarray==2022.3.0
    ciso8601 
    gdal
    fsspec>=2022.1.0
    fiona
    rasterio>=1.3.2

[options.entry_points]
console_scripts =
    odc-stats = odc.stats.cli:main

[options.packages.find]
include =
  odc*

# datacube_ows<1.8.21 has issue on function config internal over-writing
[options.extras_require]
ows =
    datacube_ows>=1.8.21
    sentry-sdk
    blinker

[flake8]
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
    # Allow individual bit of pytest to be imported: sometimes conciseness is nice.
    PT013,

per-file-ignores =
    # Jupyter notebooks display  the final expression in cells
    # Statement seems to have no effect (pointless-statement)
    notebooks/s2-GM-stats.py: W0104

# Note that Black will enforce all code to line-length of 88.
#
# But we have many old comments in the codebase that are longer than this and
# not worth dirtying the history to clean up, so we make Flake8's line length
# check lenient.
max-line-length = 120
